objects/CMPL123CME__Investigation_Template_Item__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Description_URL__c</fullName>
        <description>Description URL</description>
        <inlineHelpText>Description URL</inlineHelpText>
        <label>Description URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Instructions__c</fullName>
        <label>Instruction(s)</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Comment_Required_Options__c</fullName>
        <label>Investigation Comment Required Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Item_Description__c</fullName>
        <label>Investigation Item Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Item_Value__c</fullName>
        <label>Investigation Item Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Template_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Investigation Template  External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Template__c</fullName>
        <label>Investigation Template</label>
        <referenceTo>CMPL123CME__Investigation_Template__c</referenceTo>
        <relationshipLabel>Investigation Template Items</relationshipLabel>
        <relationshipName>Investigation_Template_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Item_No__c</fullName>
        <label>Item No</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Parent_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Item</label>
        <referenceTo>CMPL123CME__Investigation_Template_Item__c</referenceTo>
        <relationshipLabel>Investigation Template Items</relationshipLabel>
        <relationshipName>Investigation_Template_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Picklist_Values__c</fullName>
        <inlineHelpText>If Field Type='PickList', provide Picklist Values in comma separated</inlineHelpText>
        <label>Picklist Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Investigation Template Item</label>
    <nameField>
        <displayFormat>INV-T-I-{00000}</displayFormat>
        <label>Investigation Template Items No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigation Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>